update admin dashboard

--- a/angular-admin/src/app/login/login.component.html
+++ b/angular-admin/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="row align-items-center vh-100 bg-light">
     <form class="login-form container-fluid p-3 border" [formGroup]="loginForm" (ngSubmit)="login()">
         <div class="row text-center mb-5">
-          <h4>eCommerce Admin</h4>
+          <h4>eCommerce Management</h4>
         </div>
         <mat-form-field class="login-full-width">
           <mat-label>Username</mat-label>
