--- a/angular-admin/src/app/page/category/category-list/category-list.component.html
+++ b/angular-admin/src/app/page/category/category-list/category-list.component.html
@@ -28,28 +28,19 @@
   <mat-card-content>
     <div class="mat-elevation-z8">
       <table mat-table [dataSource]="dataSource" class="mb-4">
-        <!-- Position Column -->
-        <ng-container matColumnDef="position">
+        <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef>No.</th>
-          <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+          <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
         </ng-container>
 
-        <!-- Name Column -->
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef>Name</th>
           <td mat-cell *matCellDef="let element">{{ element.name }}</td>
         </ng-container>
 
-        <!-- Weight Column -->
-        <ng-container matColumnDef="weight">
-          <th mat-header-cell *matHeaderCellDef>Weight</th>
-          <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
-        </ng-container>
-
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="symbol">
-          <th mat-header-cell *matHeaderCellDef>Symbol</th>
-          <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef>Description</th>
+          <td mat-cell *matCellDef="let element">{{ element.description }}</td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -59,8 +50,11 @@
   </mat-card-content>
   <mat-card-footer>
     <mat-paginator
-      [pageSizeOptions]="[5, 10, 20]"
+      [pageSizeOptions]="[1, 5, 10, 20]"
       showFirstLastButtons
+      [pageSize]="gridParam.pageSize"
+      [length]="totalCount"
+      (page)="onChangePage($event)"
       aria-label="Select page of periodic elements"
     >
     </mat-paginator>
