--- a/angular-admin/src/app/page/category/category-list/category-list.component.html
+++ b/angular-admin/src/app/page/category/category-list/category-list.component.html
@@ -8,10 +8,16 @@
           fullWidth
           fieldSize="medium"
           placeholder="Search by name ..."
+          [(ngModel)]="searchText"
         />
       </div>
       <div class="col d-flex justify-content-end">
-        <button mat-raised-button color="primary" class="button-action">
+        <button
+          mat-raised-button
+          color="primary"
+          class="button-action"
+          (click)="onSearch()"
+        >
           <nb-icon icon="search-outline"></nb-icon>
         </button>
         <button
