--- a/angular-admin/src/app/login/login.component.html
+++ b/angular-admin/src/app/login/login.component.html
@@ -1,31 +1,46 @@
 <div class="row align-items-center vh-100 bg-light">
-    <form class="login-form container-fluid p-3 border" [formGroup]="loginForm" (ngSubmit)="login()">
-        <div class="row text-center mb-5">
-          <h4>eCommerce Management</h4>
-        </div>
-        <mat-form-field class="login-full-width">
-          <mat-label>Username</mat-label>
-          <input
-            matInput
-            formControlName="username"
-          />
-          <mat-error *ngIf="checkError('username', 'required')">Username is required.</mat-error>
-        </mat-form-field>
-      
-        <mat-form-field class="login-full-width">
-          <mat-label>Password</mat-label>
-          <input
-            matInput
-            type="password"
-            formControlName="password"
-          />
-          <mat-error *ngIf="checkError('password', 'required')">Password is required.</mat-error>
-        </mat-form-field>
-      
-        <div class="row justify-content-center">
-          <button mat-raised-button color="primary" class="width-fit-content" type="submit">
-            Login
-          </button>
-        </div>
-      </form>
+  <form
+    class="login-form container-fluid p-3 border"
+    [formGroup]="loginForm"
+    (ngSubmit)="login()"
+  >
+    <div class="row text-center mb-5">
+      <h4>eCommerce Management</h4>
+    </div>
+    <mat-form-field class="login-full-width">
+      <mat-label>Username</mat-label>
+      <input matInput formControlName="username" />
+      <mat-error *ngIf="checkError('username', 'required')"
+        >Username is required.</mat-error
+      >
+    </mat-form-field>
+
+    <mat-form-field class="login-full-width">
+      <mat-label>Password</mat-label>
+      <input matInput type="password" formControlName="password" />
+      <mat-error *ngIf="checkError('password', 'required')"
+        >Password is required.</mat-error
+      >
+    </mat-form-field>
+
+    <div>
+      <div class="row justify-content-center">
+        <button
+          mat-raised-button
+          color="primary"
+          class="width-fit-content"
+          type="submit"
+        >
+          Login
+        </button>
+      </div>
+      <div class="text-center my-3">-OR-</div>
+      <div class="d-flex justify-content-center">
+        <asl-google-signin-button
+          type="standard"
+          size="large"
+        ></asl-google-signin-button>
+      </div>
+    </div>
+  </form>
 </div>
