--- a/angular-admin/src/app/page/page.component.html
+++ b/angular-admin/src/app/page/page.component.html
@@ -10,6 +10,8 @@
           [name]="userInfo.userName"
           [title]="userInfo.roles[0]"
           color="#cccccc"
+          [nbContextMenu]="items"
+          nbContextMenuTag="menu-context-user-tag"
         >
         </nb-user>
       </div>
