--- a/angular-admin/src/app/page/page.component.html
+++ b/angular-admin/src/app/page/page.component.html
@@ -5,15 +5,32 @@
         <h6>eCommerce Management</h6>
       </div>
       <div class="col d-flex justify-content-end">
-        <nb-user
-          size="large"
-          [name]="userInfo.userName"
-          [title]="userInfo.roles[0]"
-          color="#cccccc"
-          [nbContextMenu]="items"
-          nbContextMenuTag="menu-context-user-tag"
-        >
-        </nb-user>
+        <nb-actions size="medium">
+          <nb-action
+            icon="search-outline"
+            badgeText="99+"
+            badgeStatus="warning"
+          >
+          </nb-action>
+          <nb-action
+            icon="bell-outline"
+            badgeText="12"
+            badgePosition="top right"
+            badgeStatus="danger"
+          >
+          </nb-action>
+          <nb-action badgePosition="top right">
+            <nb-user
+              size="large"
+              [name]="userInfo.userName"
+              [title]="userInfo.roles[0]"
+              color="#cccccc"
+              [nbContextMenu]="items"
+              nbContextMenuTag="menu-context-user-tag"
+            >
+            </nb-user>
+          </nb-action>
+        </nb-actions>
       </div>
     </div>
   </nb-layout-header>
