--- a/angular-admin/src/app/page/page.component.html
+++ b/angular-admin/src/app/page/page.component.html
@@ -1,41 +1,11 @@
 <nb-layout>
   <nb-layout-header fixed>
-    <div class="row w-100">
-      <div class="col d-flex align-items-center">
-        <h6>eCommerce Management</h6>
-      </div>
-      <div class="col d-flex justify-content-end">
-        <nb-actions size="medium">
-          <nb-action
-            icon="search-outline"
-            badgeText="99+"
-            badgeStatus="warning"
-          >
-          </nb-action>
-          <nb-action
-            icon="bell-outline"
-            badgeText="12"
-            badgePosition="top right"
-            badgeStatus="danger"
-          >
-          </nb-action>
-          <nb-action badgePosition="top right">
-            <nb-user
-              size="large"
-              [name]="userInfo.userName"
-              [title]="userInfo.roles[0]"
-              color="#cccccc"
-              [nbContextMenu]="items"
-              nbContextMenuTag="menu-context-user-tag"
-            >
-            </nb-user>
-          </nb-action>
-        </nb-actions>
-      </div>
-    </div>
+    <app-app-header
+      style="display: flex; justify-content: space-between; width: 100%"
+    ></app-app-header>
   </nb-layout-header>
 
-  <nb-sidebar>
+  <nb-sidebar tag="nb-sidebar" responsive>
     <app-menu-bar></app-menu-bar>
   </nb-sidebar>
 
