--- a/angular-admin/src/styles.scss
+++ b/angular-admin/src/styles.scss
@@ -1,6 +1,15 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use "@angular/material" as mat;
+@use "shared/scss/core.scss" as *;
+
+// framework component styles
+@use "@nebular/theme/styles/globals" as *;
+
+// install the framework styles
+@include nb-install() {
+  @include nb-theme-global();
+}
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -45,8 +54,5 @@ body {
 
 /* Importing Bootstrap SCSS file. */
 @import "bootstrap/scss/bootstrap";
-
-@import "shared/scss/core.scss";
-
 // regular style toast
 @import "ngx-toastr/toastr";
