--- a/angular-admin/src/app/page/category/category-list/category-list.component.html
+++ b/angular-admin/src/app/page/category/category-list/category-list.component.html
@@ -24,6 +24,7 @@
           mat-raised-button
           class="button-action bg-success text-white"
           style="margin-left: 1rem"
+          (click)="onCreate('500ms', '300ms')"
         >
           <nb-icon icon="plus-outline"></nb-icon>
           Create
@@ -47,6 +48,24 @@
         <ng-container matColumnDef="description">
           <th mat-header-cell *matHeaderCellDef>Description</th>
           <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="action">
+          <th
+            mat-header-cell
+            *matHeaderCellDef
+            style="min-width: 150px; width: 200px"
+          >
+            Action
+          </th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-raised-button color="basic">
+              <nb-icon icon="edit-outline"></nb-icon>
+            </button>
+            <button mat-raised-button color="warn" class="ms-2">
+              <nb-icon icon="trash-2-outline"></nb-icon>
+            </button>
+          </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
