--- a/angular-admin/src/app/page/category/category-list/category-list.component.html
+++ b/angular-admin/src/app/page/category/category-list/category-list.component.html
@@ -34,7 +34,12 @@
   </mat-card-header>
   <mat-card-content>
     <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource" class="mb-4">
+      <table
+        *ngIf="!isLoading"
+        mat-table
+        [dataSource]="dataSource"
+        class="mb-4"
+      >
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef>No.</th>
           <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
@@ -71,6 +76,10 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
+      <div *ngIf="isLoading" class="spinner-container">
+        <mat-progress-spinner color="primary" mode="indeterminate">
+        </mat-progress-spinner>
+      </div>
     </div>
   </mat-card-content>
   <mat-card-footer>
