--- a/angular-admin/src/app/page/category/category-list/category-list.component.scss
+++ b/angular-admin/src/app/page/category/category-list/category-list.component.scss
@@ -1,3 +1,11 @@
 .button-action {
   min-height: 40px;
 }
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fafafa;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
