add view and add new api chat

--- a/angular-admin/src/app/page/page.component.html
+++ b/angular-admin/src/app/page/page.component.html
@@ -8,7 +8,7 @@
   <nb-sidebar tag="nb-sidebar" responsive>
     <app-menu-bar></app-menu-bar>
   </nb-sidebar>
-  <nb-layout-column style="padding: 1rem 0.5rem 0 0.5rem">
+  <nb-layout-column style="padding: 0 0 0 0.5rem">
     <router-outlet></router-outlet>
   </nb-layout-column>
 </nb-layout>
