add component user, layout chat and fix bug

--- a/angular-admin/src/app/page/chatting/list-chat/list-chat.component.html
+++ b/angular-admin/src/app/page/chatting/list-chat/list-chat.component.html
@@ -1,4 +1,4 @@
-<mat-card style="height: fit-content !important">
+<mat-card style="height: calc(100vh - 4.75rem);">
   <mat-card-content>
     <div class="row d-flex">
       <app-list-user-chatting class="col-4"></app-list-user-chatting>
