--- a/angular-admin/src/app/page/chatting/list-message-chatting/list-message-chatting.component.html
+++ b/angular-admin/src/app/page/chatting/list-message-chatting/list-message-chatting.component.html
@@ -1,4 +1,4 @@
-<nb-chat #chatComponent title="Thu Nguyen" size="medium" [scrollBottom]="false">
+<nb-chat #chatComponent title="Thu Nguyen" size="medium" [scrollBottom]="false" style="height: calc(100vh - 10rem);">
   <a *nbCustomMessage="'link'; let data" [href]="data.href" target="_blank">
     {{ data.text }}
   </a>
