--- a/angular-admin/src/app/page/chatting/list-user-chatting/list-user-chatting.component.html
+++ b/angular-admin/src/app/page/chatting/list-user-chatting/list-user-chatting.component.html
@@ -1,4 +1,4 @@
-<nb-card size="small">
+<nb-card size="small" style="height: calc(100vh - 10rem);">
   <nb-card-header>
     <div class="row d-flex justify-content-between">
       <label class="width-fit-content">Friends</label>
