--- a/angular-admin/src/app/page/user/create-or-update-user/create-or-update-user.component.html
+++ b/angular-admin/src/app/page/user/create-or-update-user/create-or-update-user.component.html
@@ -1,39 +1,55 @@
-<form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
-    <h1 mat-dialog-title style="font-size: x-larger">
-      <b>{{ this.data.title }}</b>
-    </h1>
-    <mat-dialog-content class="mat-typography mt-3">
-      <div class="row">
-        <div class="col-md-3 col-sm-12">
-          <label for="">Username<span class="text-danger">*</span></label>
-        </div>
-        <div class="col-md-9 col-sm-12">
-          <mat-form-field appearance="outline" class="w-100">
-            <input matInput formControlName="userName" />
-          </mat-form-field>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-3 col-sm-12">
-          <label for="">Phone</label>
-        </div>
-        <div class="col-md-9 col-sm-12">
-          <mat-form-field appearance="outline" class="w-100">
-            <input matInput formControlName="phoneNumber" />
-          </mat-form-field>
-        </div>
-      </div>
-    </mat-dialog-content>
-    <mat-dialog-actions align="end">
-      <button mat-button mat-dialog-close>{{ GlobalString.CLOSE }}</button>
+<form [formGroup]="formGroup" (ngSubmit)="onSubmit()" id="form-create-user">
+  <h1 mat-dialog-title style="font-size: x-larger">
+    <b>{{ this.data.title }}</b>
+  </h1>
+  <mat-dialog-content class="mat-typography mt-3">
+    <div class="row justify-content-center mb-2">
+      <label class="hoverable" for="fileInput">
+        <img [src]="avatar" />
+        <div class="hover-text">Choose file</div>
+        <div class="background"></div>
+      </label>
+      <br />
+      <input id="fileInput" type="file" (change)="onSelectFile($event)" />
       <button
         mat-button
-        class="bg-success text-white"
-        [disabled]="isSaving"
-        type="submit"
+        *ngIf="avatar"
+        class="width-fit-content bg-danger text-white"
+        (click)="onDeleteAvatar()"
       >
-        {{ GlobalString.SAVE }}
+        <nb-icon icon="close-outline"></nb-icon>
       </button>
-    </mat-dialog-actions>
-  </form>
-  
+    </div>
+    <div class="row">
+      <div class="col-md-3 col-sm-12">
+        <label for="">Username<span class="text-danger">*</span></label>
+      </div>
+      <div class="col-md-9 col-sm-12">
+        <mat-form-field appearance="outline" class="w-100">
+          <input matInput formControlName="userName" />
+        </mat-form-field>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-3 col-sm-12">
+        <label for="">Phone</label>
+      </div>
+      <div class="col-md-9 col-sm-12">
+        <mat-form-field appearance="outline" class="w-100">
+          <input matInput formControlName="phoneNumber" />
+        </mat-form-field>
+      </div>
+    </div>
+  </mat-dialog-content>
+  <mat-dialog-actions align="end">
+    <button mat-button mat-dialog-close>{{ GlobalString.CLOSE }}</button>
+    <button
+      mat-button
+      class="bg-success text-white"
+      [disabled]="isSaving"
+      type="submit"
+    >
+      {{ GlobalString.SAVE }}
+    </button>
+  </mat-dialog-actions>
+</form>
