--- a/angular-admin/src/app/page/user/create-or-update-user/create-or-update-user.component.html
+++ b/angular-admin/src/app/page/user/create-or-update-user/create-or-update-user.component.html
@@ -40,6 +40,26 @@
         </mat-form-field>
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-3 col-sm-12">
+        <label for="">Email</label>
+      </div>
+      <div class="col-md-9 col-sm-12">
+        <mat-form-field appearance="outline" class="w-100">
+          <input matInput formControlName="email" />
+        </mat-form-field>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-3 col-sm-12">
+        <label for="">Address</label>
+      </div>
+      <div class="col-md-9 col-sm-12">
+        <mat-form-field appearance="outline" class="w-100">
+          <input matInput formControlName="address" />
+        </mat-form-field>
+      </div>
+    </div>
   </mat-dialog-content>
   <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>{{ GlobalString.CLOSE }}</button>
