--- a/angular-admin/src/shared/scss/core.scss
+++ b/angular-admin/src/shared/scss/core.scss
@@ -20,3 +20,7 @@ nb-select .select-button {
 .nb-theme-corporate .cdk-overlay-container {
   z-index: 1040;
 }
+
+.cursor-pointer{
+  cursor: pointer!important;
+}
