--- a/angular-admin/src/app/page/chatting/list-user-chatting/list-user-chatting.component.html
+++ b/angular-admin/src/app/page/chatting/list-user-chatting/list-user-chatting.component.html
@@ -2,7 +2,7 @@
   <nb-card-header>
     <div class="row d-flex justify-content-between">
       <label class="width-fit-content">Friends</label>
-      <a class="width-fit-content"><nb-icon icon="edit-2-outline"></nb-icon></a>
+      <a class="width-fit-content cursor-pointer" (click)="openAddConversationDialog()"><nb-icon icon="edit-2-outline"></nb-icon></a>
     </div>
   </nb-card-header>
   <nb-list>
