--- a/angular-admin/src/app/page/chatting/list-chat/list-chat.component.html
+++ b/angular-admin/src/app/page/chatting/list-chat/list-chat.component.html
@@ -1,7 +1,10 @@
-<mat-card style="height: calc(100vh - 4.75rem);">
+<mat-card style="height: calc(100vh - 4.75rem)">
   <mat-card-content>
     <div class="row d-flex">
-      <app-list-user-chatting class="col-4"></app-list-user-chatting>
+      <app-list-user-chatting
+        (hadConversation)="openConversation($event)"
+        class="col-4"
+      ></app-list-user-chatting>
       <app-list-message-chatting class="col-8"></app-list-message-chatting>
     </div>
   </mat-card-content>
