--- a/angular-admin/src/app/page/chatting/list-user-chatting/list-user-chatting.component.html
+++ b/angular-admin/src/app/page/chatting/list-user-chatting/list-user-chatting.component.html
@@ -1,13 +1,19 @@
-<nb-card size="small" style="height: calc(100vh - 10rem);">
+<nb-card size="small" style="height: calc(100vh - 10rem)">
   <nb-card-header>
     <div class="row d-flex justify-content-between">
       <label class="width-fit-content">Friends</label>
-      <a class="width-fit-content cursor-pointer" (click)="openAddConversationDialog()"><nb-icon icon="edit-2-outline"></nb-icon></a>
+      <a
+        class="width-fit-content cursor-pointer"
+        (click)="openAddConversationDialog()"
+        ><nb-icon icon="edit-2-outline"></nb-icon
+      ></a>
     </div>
   </nb-card-header>
   <nb-list>
     <nb-list-item *ngFor="let user of users">
-      <nb-user [name]="user.name" [title]="user.title"> </nb-user>
+      <div (click)="openWindowChat(user)">
+        <nb-user [name]="user.friendName"> </nb-user>
+      </div>
     </nb-list-item>
   </nb-list>
 </nb-card>
