--- a/angular-admin/src/app/page/chatting/list-message-chatting/list-message-chatting.component.html
+++ b/angular-admin/src/app/page/chatting/list-message-chatting/list-message-chatting.component.html
@@ -1,29 +1,22 @@
-<nb-chat #chatComponent title="Thu Nguyen" size="medium" [scrollBottom]="false" style="height: calc(100vh - 10rem);">
-  <a *nbCustomMessage="'link'; let data" [href]="data.href" target="_blank">
-    {{ data.text }}
-  </a>
-
-  <div *nbCustomMessage="'button'; let buttonText">
-    <p class="text-control button-custom-message-text">
-      Wow! Button in a message!
-    </p>
-    <button
-      nbButton
-      status="control"
-      (click)="chatComponent.scrollListBottom()"
-    >
-      {{ buttonText }}
-    </button>
-  </div>
-
+<nb-chat
+  #chatComponent
+  [title]="friendInfo.userName"
+  size="medium"
+  [scrollBottom]="true"
+  style="height: calc(100vh - 10rem)"
+>
   <nb-chat-message
-    *ngFor="let msg of messages"
-    [type]="msg.type"
-    [message]="msg.text"
-    [reply]="msg.reply"
-    [sender]="msg.user.name"
-    [date]="msg.date"
-    [customMessageData]="msg.customMessageData"
+    *ngFor="let message of messages"
+    [type]="message.type"
+    [message]="message.text"
+    [reply]="message.reply"
+    [sender]="message.user.name"
+    [date]="message.date"
+    [files]="message.files"
+    [quote]="message.quote"
+    [latitude]="message.latitude"
+    [longitude]="message.longitude"
+    [avatar]="message.user.avatar"
   >
   </nb-chat-message>
 
