--- a/angular-admin/src/shared/scss/core.scss
+++ b/angular-admin/src/shared/scss/core.scss
@@ -21,6 +21,10 @@ nb-select .select-button {
   z-index: 1040;
 }
 
-.cursor-pointer{
-  cursor: pointer!important;
+.cursor-pointer {
+  cursor: pointer !important;
+}
+
+.text-align-end {
+  text-align: end !important;
 }
